--- a/projekt zespolowy/appsettings.json
+++ b/projekt zespolowy/appsettings.json
@@ -1,11 +1,12 @@
-// appsettings.json
 {
   "Logging": {
-    // ... (стандартні налаштування логування)
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
   },
   "AllowedHosts": "*",
-  // --- ДОДАЙ ЦЕЙ БЛОК ---
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=database.db"
+    "DefaultConnection": "Host=shinkansen.proxy.rlwy.net;Port=13662;Database=railway;Username=postgres;Password=HdvbEaFoVxlzsHIbplWvNPcfwYxaYmWb;SSL Mode=Require;Trust Server Certificate=true"
   }
 }
