--- a/projekt zespolowy/appsettings.json
+++ b/projekt zespolowy/appsettings.json
@@ -1,12 +1,13 @@
 {
+   "ConnectionStrings": {
+    "DefaultConnection": "Host=shinkansen.proxy.rlwy.net;Port=13662;Database=railway;Username=postgres;Password=HdvbEaFoVxlzsHIbplWvNPcfwYxaYmWb;SSL Mode=Require;Trust Server Certificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=shinkansen.proxy.rlwy.net;Port=13662;Database=railway;Username=postgres;Password=HdvbEaFoVxlzsHIbplWvNPcfwYxaYmWb;SSL Mode=Require;Trust Server Certificate=true"
-  }
+  "AllowedHosts": "*"
+ 
 }
